<resources>
    <string name="Icono_de_sesion">Ícono de sesion</string>
    <string name="app_name">El Retén Inventario</string>
    <string name="Icono_de_estante">Ícono de estante</string>
    <string name="codigo_s">Código: %s</string>
    <string name="cant_gavetas">%s gavetas</string>
    <string name="cant_secciones">%s secciones</string>
    <string name="cant_producto">%s productos</string>
    <string name="Dependent">Dependiente</string>
    <string name="Administrator">Administrador</string>
    <string name="Password">Contraseña</string>
    <string name="Start_session">Iniciar sesión</string>
    <string name="Se_ha_producido_un_error">Se ha producido un error</string>
    <string name="Revise_su_conexion">Revise su conexión a Internet e intente de nuevo</string>
    <string name="Aceptar">Aceptar</string>
    <string name="este_campo_no_debe_vacio">Este campo no debe de estar vacío</string>
    <string name="Contrasena_incorrecta">Contraseña incorrecta</string>
    <string name="salir">Salir</string>
    <string name="seguro_desea_salir">Realmente desea salir de la aplicación</string>
    <string name="Si">Si</string>
    <string name="no">No</string>
    <string name="Cerrar">Cerrar</string>
    <string name="cerrar_password">La aplicación cerrará por demasiados intentos fallidos de contraseña.</string>
    <string name="intentos_fallidos">Demasiados intentos</string>
    <string name="No_hay_productos">No hay productos aún</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Vacio">Vacio\n</string>
    <string name="no_hay_estantes_aun">No hay estantes aún</string>
    <string name="a_dir_estantes">Añadir estantes</string>
    <string name="Pedidos">Pedidos</string>
    <string name="text_header_admin">\"El éxito en los negocios viene de tener un inventario bien gestionado\"</string>
    <string name="text_header_salesperson">\"La venta no se trata de convencer a una persona para que compre algo, sino de ayudarle a resolver un problema\"</string>
    <string name="lee_lacocca">Lee Lacocca</string>
    <string name="David_sandler">David Sandler</string>
    <string name="Estanteria">Estantería</string>
    <string name="Productos">Productos</string>
    <string name="Estad_sticas">Estadísticas</string>
    <string name="agregar_estant">Agregar estante</string>
    <string name="Reintentar">Reintentar</string>
    <string name="error">Error</string>
    <string name="c_digo_del_estante">Código del estante</string>
    <string name="c_digo_de_gaveta">Código de la gaveta</string>
    <string name="c_digo_de_seccion">Código de la sección</string>
    <string name="ACCEPT">ACEPTAR</string>
    <string name="CANCEL">CANCELAR</string>
    <string name="Almacen">Almacén</string>
    <string name="Editar">Editar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Operacion_realizada_con_exito">Operación realizada con éxito</string>
    <string name="Eliminar_elemento">Eliminar elemento</string>
    <string name="Desea_eliminar_el_estante">¿Desea realmente eliminar el estante? Si elimina el estante se eliminará todo lo que contenga, incluyendo gavetas, secciones y productos.</string>
    <string name="Desea_eliminar_la_gaveta">¿Desea realmente eliminar la gaveta? Si elimina la gaveta se eliminará todo lo que contenga, incluyendo secciones y productos.</string>
    <string name="Desea_eliminar_la_seccion">¿Desea realmente eliminar la seccion? Si elimina la sección se eliminarán todos los productos.</string>
    <string name="No">No</string>
    <string name="name_product">Nombre del producto</string>
    <string name="price_default">0.00</string>
    <string name="little_description">Descripción del producto....</string>
    <string name="Edit_Produt">Editar Producto</string>
    <string name="sobre_nosotros">Sobre nosotros:</string>
    <string name="negocio_particular">Negocio particular</string>
    <string name="_53_58419241">+53 58419241</string>
    <string name="sobre_nosotros_desc">"Tenga una cordial bienvenida a El Retén, tu tienda de confianza para encontrar las mejores piezas del mercado. Nos especializamos en ofrecer una amplia selección de piezas de alta calidad para todo tipo de motores. En El Retén, nuestra misión es brindar a nuestros clientes un servicio excepcional y un conocimiento experto en dicha industria"</string>
    <string name="Acerca_de_nosotros">Sobre nosotros</string>
    <string name="El_reten">El Retén</string>
    <string name="about_dev">Sobre desarrolladores</string>
    <string name="q_necesitas">QNecesitas</string>
    <string name="productos_inform_ticos">Productos Informáticos</string>
    <string name="Nuestro_numero">+53 55759386</string>
    <string name="ronnynordelo_gmail_com">ronnynordelo@gmail.com</string>
    <string name="mision_nuestra">El enfoque que buscamos es el de una empresa acogedora, cuyos complicados servicios sean llevados a los clientes de forma fácil de comprender. Cuba es un país poco informatizado por lo que tenemos noción de que la mayoría de nuestros clientes conocen la importancia de llevar su negocio a las redes y la tecnología pero sus conocimientos de aplicaciones y páginas web son pocos o ninguno, así que si ese es su caso no se preocupe, solo tiene que decirnos alguna idea que tenga o la información que quiere informatizar y haremos magia.</string>
    <string name="qnecesitas_nat_cu">qnecesitas.nat.cu</string>
    <string name="https_www_facebook_com_qnecesitas_paginaprincipal">https://www.facebook.com/qnecesitas.paginaprincipal</string>
    <string name="misi_n">Misión:</string>
    <string name="no_hay_gavetas_aun">No hay gavetas aún</string>
    <string name="estantes">Estantes</string>
    <string name="Gavetas">Gavetas</string>
    <string name="Estantes">Estantes</string>
    <string name="Secciones">Secciones</string>
    <string name="no_hay_secciones_aun">No hay secciones aún</string>
    <string name="_0">0</string>
    <string name="s_unidades">%d unidades</string>
    <string name="Buscar_producto">Buscar producto</string>
    <string name="a_adir_producto">Añadir producto</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="Mostrador">Mostrador</string>
    <string name="c_digo">Código</string>
    <string name="name">Producto</string>
    <string name="precio_de_compra">Coste del producto:</string>
    <string name="precio_de_venta">Precio de venta</string>
    <string name="cantidad">Cantidad</string>
    <string name="descripci_n">Descripción</string>
    <string name="cup">CUP</string>
    <string name="unidades">Unidades</string>
    <string name="Agregando_producto">Agregando producto</string>
    <string name="Espere">Espere</string>
    <string name="Agregar">Agregar</string>
    <string name="error_obtener_imagen">Error al obtener imagen</string>
    <string name="eliminar">Eliminar</string>
    <string name="Transferir">Transferir</string>
    <string name="Cantidad">Cantidad</string>
    <string name="seleccione_la_ubicaci_n_a_transferir">Seleccione la ubicación a transferir</string>
    <string name="Producto_Info">Producto: %s</string>
    <string name="Codigo_Info">Código: %s</string>
    <string name="PrecioV_Info">Precio venta: %.1f CUP</string>
    <string name="Medida_Info">Medida: %s</string>
    <string name="Modelo_Info">Marca: %s</string>
    <string name="Size_Info">Medida: %s </string>
    <string name="Brand_Info">Marca: %s </string>
    <string name="PrecioC_Info">Coste del producto: %.1f CUP</string>
    <string name="Cantidad_Info">Cantidad disponible: %d unidades</string>
    <string name="Descripcion_Info">Descripción: %s</string>
    <string name="options">Options</string>
    <string name="cantidad_producto">Cantidad de productos restantes</string>
    <string name="no_hay_productos_con_deficit">No hay productos con deficit</string>
    <string name="Seleccione">Seleccione</string>
    <string name="qu_cantidad_considera_n_como_deficit">¿Qué cantidad considera\n como deficit?</string>
    <string name="cantidad_m_nima">Cantidad mínima</string>
    <string name="Cambiar_contrase_as_dependiente">Cambiar contraseña de dependientes</string>
    <string name="Cambiar_contrase_as_admin">Cambiar contraseña de administrador</string>
    <string name="Contrase_a_actual">Contraseña actual</string>
    <string name="Contrase_nueva">Contraseña nueva</string>
    <string name="Contrase_a_confirmar">Confirme la nueva</string>
    <string name="Configuraci_n">Configuración</string>
    <string name="los_campos_no_coinciden">No coinciden la contraseña a confirmar y la nueva</string>
    <string name="Seleccione_Gaveta">Seleccione Gaveta</string>
    <string name="Seleccione_Estante">Seleccione Estante</string>
    <string name="elemento_no_vaciado">Elemento no vaciado</string>
    <string name="debe_eliminar_todo">Debe eliminar todo dentro del elemento para poder eliminarlo. Elementos por eliminar: %d</string>
    <string name="cambiar_cantidad">Cambiar cantidad</string>
    <string name="restar">Restar</string>
    <string name="sumar">Sumar</string>
    <string name="Ubicacion">Ubicación</string>
    <string name="Menos">menos</string>
    <string name="Mas">agregar</string>
    <string name="cancelar">Cancelar</string>
    <string name="info">Información</string>
    <string name="Enviar_pedido">Enviar pedido</string>
    <string name="_1">1</string>
    <string name="carrito">Carrito</string>
    <string name="no_elementos_carrito">No hay elementos en el carrito</string>
    <string name="registrar_venta">Registrar venta</string>
    <string name="tiene_seguridad_de_registrar">¿Tiene seguridad de registrar esta venta?</string>
    <string name="no_puede_acceder_con_0">Tiene 0 unidades de este elemento</string>
    <string name="Ventas">Ventas</string>
    <string name="numeral">#</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="nombre"><b>Nombre:</b> %s</string>
    <string name="Fecha"><b>Fecha:</b> %s/%s/%s</string>
    <string name="rebaja"><b>Descuento:</b> %s</string>
    <string name="precioTotal"><b>Precio Total:</b> %s</string>
    <string name="Orden"><b>Orden:</b> \n<i> %s</i></string>
    <string name="_10_5_2023">10/5/2023</string>
    <string name="No_hay_ventas">No hay ventas aún</string>
    <string name="Dia">Día</string>
    <string name="Mes">Mes</string>
    <string name="Anno">Año</string>
    <string name="todo">Todo</string>
    <string name="fecha">Fecha</string>
    <string name="seleccione_el_a_o_que_desea_filtrar">Seleccione el año que desea filtrar:</string>
    <string name="a">A</string>
    <string name="seleccione_el_mes_filtrar">Seleccione el mes por el que desea filtrar:</string>
    <string name="seleccione_el_dia_filtrar">Seleccione el día por el que desea filtrar</string>
    <string name="Orden_s">Orden:</string>
    <string name="precioTotal_s">Precio Total:</string>
    <string name="rebaja_s">Descuento:</string>
    <string name="Fecha_s">Fecha:</string>
    <string name="nombre_s">Nombre:</string>
    <string name="Deficit">Productos en deficit</string>
    <string name="OrganizacionD">Almacén de dependiente</string>
    <string name="AlmacenA">Almacén de administrador</string>
    <string name="EProductos">Encontrar entre productos</string>
    <string name="sobre_nosotrosx">Sobre nosotros</string>
    <string name="deficit">Deficit</string>
    <string name="borrar_pedido">Vaciar pedidos</string>
    <string name="PrecioTotal">%.1f CUP</string>
    <string name="nombre_cliente">Nombre cliente</string>
    <string name="descuento">Descuento</string>
    <string name="finalizar_pedido">Finalizar pedido</string>
    <string name="Elemento_repetido">Elemento repetido</string>
    <string name="Desea_eliminar_el_producto">¿Desea realmente eliminar el producto?</string>
</resources>