<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--cv_main_content-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/standard_card_corner_radius">

        <!--cl_main_content-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="15sp">

            <!--image-->
            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:background="@color/md_theme_light_secondaryContainer"
                android:importantForAccessibility="no"
                android:src="@drawable/widgets"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Information-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image"
                app:layout_constraintEnd_toStartOf="@id/settings">

                <TextView
                    android:id="@+id/info_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/Producto_Info"
                    android:textSize="@dimen/textSize_m"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/info_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/Codigo_Info"
                    android:textSize="@dimen/textSize_s"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/info_name" />

                <TextView
                    android:id="@+id/info_priceS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                     android:text="@string/PrecioV_Info"
                    android:textSize="@dimen/textSize_s"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/info_code"
                    app:layout_constraintHorizontal_bias="0" />

                <TextView
                    android:id="@+id/info_priceB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/PrecioC_Info"
                    android:textSize="@dimen/textSize_s"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/info_priceS"
                    app:layout_constraintHorizontal_bias="0" />

                <TextView
                    android:id="@+id/info_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/Cantidad_Info"
                    android:textSize="@dimen/textSize_s"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/info_priceB" />

                <TextView
                    android:id="@+id/info_descr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/Descripcion_Info"
                    android:textSize="@dimen/textSize_s"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/info_amount" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--Close buttom-->
            <ImageView
                android:id="@+id/close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/circular_background"
                android:contentDescription="@string/Cerrar"
                android:padding="4dp"
                android:src="@drawable/baseline_close_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="#801E1E1E" />

            <!--Options buttom-->
            <ImageView
                android:layout_marginStart="12dp"
                android:id="@+id/settings"
                app:layout_constraintHorizontal_bias="1"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_more_vert_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image"
                app:layout_constraintStart_toEndOf="@id/cl_info"
                android:contentDescription="@string/options" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>